--- a/jboss.yml
+++ b/jboss.yml
@@ -4,7 +4,7 @@
 
   roles:
     - { role: ./,
-        docker_files_enable: yes
+        docker_files_enable: no
         #user: "root",
         #home: "/root"     
       }
